[tool.poetry]
name = "sleep paper"
version = "0.1.0"
description = ""
authors = ["jervdrdo <jeroen.vanderdonckt@ugent.be>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "1.3.5"
scikit-learn = "^1.0.2"
pyEDFlib = "0.1.22"
mne = "^1.0.1"
plotly-resampler = "^0.4.0"
tsflex = "^0.2.3"
antropy = "^0.1.4"
tsfresh = "^0.19.0"
jupyterlab = "^3.3.3"
jupyter = "^1.0.0"
yasa = "^0.6.1"
fastparquet = "^0.8.1"
termcolor = "^1.1.0"
catboost = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
